# bevy_spliff

./: Cargo.toml  readme.md
.github/workflows/: ci.yaml
bevy_spliff/: Cargo.toml
bevy_spliff/benches/: joins.rs
bevy_spliff/src/: core.rs  lib.rs
bevy_spliff/src/core/: data.rs  mod.rs  traits.rs
bevy_spliff/src/core/behavior/: joinable.rs  mapping.rs  mod.rs
bevy_spliff/src/join/: core.rs
bevy_spliff/src/join/behavior/: query_data.rs  world_query.rs
bevy_spliff/src/join/condition/: core.rs
bevy_spliff/src/join/condition/behavior/: mod.rs  query_filter.rs  world_query.rs
bevy_spliff/src/join/first/: core.rs  mod.rs
bevy_spliff/src/join/first/behavior/: mod.rs  query_data.rs  world_query.rs
bevy_spliff/src/joined/: core.rs  mod.rs
bevy_spliff/src/joined/behavior/: query_data.rs  world_query.rs
bevy_spliff/src/joined/condition/: core.rs  mod.rs
bevy_spliff/src/joined/condition/behavior/: query_filter.rs  world_query.rs
bevy_spliff/src/joined/first/: core.rs
bevy_spliff/src/joined/first/behavior/: query_data.rs  world_query.rs
bevy_spliff/src/joins/: condition.rs  first.rs  joined.rs  mod.rs
bevy_spliff/tests/: join.rs  join_condition.rs  join_first.rs  joined.rs  joins.rs
bevy_spliff/tests/common/: components.rs  constants.rs  mod.rs
bevy_spliff_derive/: Cargo.toml
bevy_spliff_derive/src/: lib.rs
