[package]
name = "bevy_spliff"
description = "A crate for doing joins in bevy."
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
bevy_ecs = "0.18.1"
bevy_spliff_derive = { version = "0.1.0", path = "../bevy_spliff_derive", optional = true }

[features]
default = ["derive", "type-aliases"]
derive = ["dep:bevy_spliff_derive"]
type-aliases = []

