[package]
name = "bevy_spliff"
description = "A crate for doing joins in bevy."
version = "0.1.2"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/NicoZweifel/bevy_spliff"

[dependencies]
bevy_ecs = { version = "0.19.0-dev", git = "https://github.com/NicoZweifel/bevy", branch ="joins" }
bevy_spliff_derive = { version = "0.1.2", path = "../bevy_spliff_derive", optional = true }

[features]
default = ["derive", "type-aliases"]
derive = ["dep:bevy_spliff_derive"]
type-aliases = []


[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "joins"
harness = false
