[package]
name = "bevy_spliff_derive"
description = "Macros for bevy_spliff."
version = "0.2.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/NicoZweifel/bevy_spliff"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
proc-macro2 = "1.0.106"
quote = "1.0"
